# Swikit

./: .dockerignore  Cargo.toml  Dockerfile  README.md  compose.yaml  schema.graphqls
client/: .eslintrc.yml  .gitignore  codegen.yml  graphql.schema.json  next.config.js  package.json  tsconfig.json
client/graphql/: createPage.graphql  getPageByTitle.graphql  updatePage.graphql
client/pages/: _app.tsx  index.tsx
client/pages/pages/: [...title].tsx
client/src/: client.ts
client/styles/: globals.css
mysql/init/: schema.sql
server/: .gitignore  Cargo.toml  schema.graphqls
server/src/: main.rs  model.rs
server/src/model/: mutation.rs  query.rs
src/: db.rs  main.rs  model.rs
src/model/: mutation.rs
