[package]
name = "swikit-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
async-graphql = "3.0.19"
async-graphql-rocket = "3.0.19"
chrono = "0.4.19"
rocket = "0.5.0-rc.1"
sqlx = { version = "0.5.10", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
